@@ -1,6 +1,7 @@
 2013-06-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* eww.el: Start writing a new, tiny web browser.
+	(eww-previous-url): New command.
 
 2013-06-10  Albert Krewinkel  <krewinkel@moltkeplatz.de>
 
